Update API
backend v0.7.0

API:
- Added `/employee_filter` endpoint
