# backend/api/oas_handlers_gen.go
@@ -187,6 +187,109 @@ func (s *Server) handleDataImportSendingPostRequest(args [0]string, w http.Respo
 	}
 }
 
+// handleEmployeeFilterGetRequest handles GET /employee_filter operation.
+//
+// Get employees that fit the filter. Require `page` and `elems_on_page`. Return amount of employees
+// that fit the filter and employees on the selected page.
+//
+// GET /employee_filter
+func (s *Server) handleEmployeeFilterGetRequest(args [0]string, w http.ResponseWriter, r *http.Request) {
+	var otelAttrs []attribute.KeyValue
+
+	// Start a span for this request.
+	ctx, span := s.cfg.Tracer.Start(r.Context(), "EmployeeFilterGet",
+		serverSpanKind,
+	)
+	defer span.End()
+
+	// Run stopwatch.
+	startTime := time.Now()
+	defer func() {
+		elapsedDuration := time.Since(startTime)
+		s.duration.Record(ctx, elapsedDuration.Microseconds(), otelAttrs...)
+	}()
+
+	// Increment request counter.
+	s.requests.Add(ctx, 1, otelAttrs...)
+
+	var (
+		recordError = func(stage string, err error) {
+			span.RecordError(err)
+			span.SetStatus(codes.Error, stage)
+			s.errors.Add(ctx, 1, otelAttrs...)
+		}
+		err          error
+		opErrContext = ogenerrors.OperationContext{
+			Name: "EmployeeFilterGet",
+			ID:   "",
+		}
+	)
+	params, err := decodeEmployeeFilterGetParams(args, r)
+	if err != nil {
+		err = &ogenerrors.DecodeParamsError{
+			OperationContext: opErrContext,
+			Err:              err,
+		}
+		recordError("DecodeParams", err)
+		s.cfg.ErrorHandler(ctx, w, r, err)
+		return
+	}
+
+	var response EmployeeFilterGetRes
+	if m := s.cfg.Middleware; m != nil {
+		mreq := middleware.Request{
+			Context:       ctx,
+			OperationName: "EmployeeFilterGet",
+			OperationID:   "",
+			Body:          nil,
+			Params: map[string]any{
+				"page":          params.Page,
+				"elems_on_page": params.ElemsOnPage,
+				"full_name":     params.FullName,
+				"settlement":    params.Settlement,
+				"postcode":      params.Postcode,
+				"position":      params.Position,
+				"birth_date":    params.BirthDate,
+				"gender":        params.Gender,
+				"phone_number":  params.PhoneNumber,
+				"sort":          params.Sort,
+			},
+			Raw: r,
+		}
+
+		type (
+			Request  = struct{}
+			Params   = EmployeeFilterGetParams
+			Response = EmployeeFilterGetRes
+		)
+		response, err = middleware.HookMiddleware[
+			Request,
+			Params,
+			Response,
+		](
+			m,
+			mreq,
+			unpackEmployeeFilterGetParams,
+			func(ctx context.Context, request Request, params Params) (Response, error) {
+				return s.h.EmployeeFilterGet(ctx, params)
+			},
+		)
+	} else {
+		response, err = s.h.EmployeeFilterGet(ctx, params)
+	}
+	if err != nil {
+		recordError("Internal", err)
+		s.cfg.ErrorHandler(ctx, w, r, err)
+		return
+	}
+
+	if err := encodeEmployeeFilterGetResponse(response, w, span); err != nil {
+		recordError("EncodeResponse", err)
+		s.cfg.ErrorHandler(ctx, w, r, err)
+		return
+	}
+}
+
 // handlePostcodesBySettlementGetRequest handles GET /postcodes_by_settlement operation.
 //
 // Get information about postcodes in cities. Return map with `settlement` key and `postcode` array
